@@ -42,11 +42,11 @@ public class HDFSFileScanTupleProducer implements TupleProducer{
     @Override
     public void initialize() throws Exception {
         System.out.println(startOffset+" "+endOffset);
-        FileSystem fs = FileSystem.get(new URI(host),new Configuration());
-        FSDataInputStream stream = fs.open(new Path(hdfsPath));
-        stream.seek(startOffset);
-        //URL url = new URL("http://"+ Constants.remoteHDFSIP()+":9870/webhdfs/v1"+hdfsPath+"?op=OPEN&offset="+startOffset);
-        //InputStream stream = url.openStream();
+        //FileSystem fs = FileSystem.get(new URI(host),new Configuration());
+        //FSDataInputStream stream = fs.open(new Path(hdfsPath));
+        //stream.seek(startOffset);
+        URL url = new URL("http://"+ Constants.remoteHDFSIP()+":9870/webhdfs/v1"+hdfsPath+"?op=OPEN&offset="+startOffset);
+        InputStream stream = url.openStream();
         reader = new BufferedBlockReader(stream,endOffset-startOffset,separator,indicesToKeep);
         if(startOffset > 0)
             reader.readLine();
